gpgconf has verbose mode enabled by default
Closed, ResolvedPublic

Assigned To
Authored By
lukele
Mar 9 2022, 12:39 PM
Tokens
"Like" token, awarded by steve.

Description

Some GPG Suite (GPGTools) users reported that they are now seeing a "strange" warning that states that no global option file exists since they installed our latest release with GnuPG 2.2.34

Note: no default option file '/usr/local/MacGPG2/etc/gnupg/gpg-agent.conf'

After investigating what could have lead to this message being displayed now, I found out that gpgconf initializes its gnupg_argparse_t args struct with ARGPARSE_FLAG_VERBOSE enabled by default. It also doesn't appear to be possible to disable it by passing --no-verbose.

It's unclear if this is a feature or a bug, but looking at the 2.3 source code, gnupg_argparse_t is correctly initialized without ARGPARSE_FLAG_VERBOSE and only enables it if the --verbose option is passed, I believe this might be a bug/oversight after all.

STABLE-BRANCH-2-2:gpgconf-comp.c:1921

pargs.flags = (ARGPARSE_FLAG_KEEP
               | ARGPARSE_FLAG_SYS
               | ARGPARSE_FLAG_USER
               | ARGPARSE_FLAG_WITHATTR
               | ARGPARSE_FLAG_VERBOSE);

Details

Version
2.2.34